# satellite_numeric_expr

./: .gitignore  Cargo.toml  README.md  experiment_automator.py
results/run_1/: results_15s_pfile1.csv  results_15s_pfile10.csv  results_15s_pfile11.csv  results_15s_pfile12.csv  results_15s_pfile13.csv  results_15s_pfile14.csv  results_15s_pfile15.csv  results_15s_pfile16.csv  results_15s_pfile17.csv  results_15s_pfile18.csv  results_15s_pfile19.csv  results_15s_pfile2.csv  results_15s_pfile20.csv  results_15s_pfile3.csv  results_15s_pfile4.csv  results_15s_pfile5.csv  results_15s_pfile6.csv  results_15s_pfile7.csv  results_15s_pfile8.csv  results_15s_pfile9.csv
results/run_2/: results_10s_pfile1.csv  results_15s_pfile1.csv  results_15s_pfile10.csv  results_15s_pfile11.csv  results_15s_pfile12.csv  results_15s_pfile13.csv  results_15s_pfile14.csv  results_15s_pfile15.csv  results_15s_pfile16.csv  results_15s_pfile17.csv  results_15s_pfile18.csv  results_15s_pfile19.csv  results_15s_pfile2.csv  results_15s_pfile20.csv  results_15s_pfile3.csv  results_15s_pfile4.csv  results_15s_pfile5.csv  results_15s_pfile6.csv  results_15s_pfile7.csv  results_15s_pfile8.csv  results_15s_pfile9.csv
results/run_3/: results_10s_pfile1.csv  results_15s_pfile1.csv  results_15s_pfile10.csv  results_15s_pfile11.csv  results_15s_pfile12.csv  results_15s_pfile13.csv  results_15s_pfile14.csv  results_15s_pfile15.csv  results_15s_pfile16.csv  results_15s_pfile17.csv  results_15s_pfile18.csv  results_15s_pfile19.csv  results_15s_pfile2.csv  results_15s_pfile20.csv  (+7 more)
src/: main.rs
(+40 files in other folders)
