[package]
name = "satellite_numeric_expr"
version = "0.1.0"
authors = ["Ivy <ivyjs@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhop = {git = "https://github.com/gjf2a/anyhop"}
blocks_world = {git = "https://github.com/gjf2a/blocks_world"}
