[package]
name = "satellite_numeric_expr"
version = "0.1.0"
authors = ["Ivy <ivyjs@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhop = {git = "https://github.com/gjf2a/anyhop"}
satellite_numeric = {git = "https://github.com/ivyjsgit/satellite_numeric", branch="Development"}
#satellite_numeric = {path = "/home/ivy/Desktop/Rust/satellite_numeric"}
fern = "0.6.0"
log = "0.4.11"
chrono = "0.4.13"
